<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@mipmap/rectbg"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="211dp"
        android:layout_height="73dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/welcome_to_photo_blog"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/passConReg"
        android:layout_width="297sp"
        android:layout_height="55dp"
        android:layout_marginBottom="244dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/rectmail"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingEnd="0dp"
        android:paddingStart="20sp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passReg"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passReg"
        android:layout_width="297sp"
        android:layout_height="50sp"
        android:layout_marginTop="148dp"
        android:background="@mipmap/rectmail"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingEnd="0dp"
        android:paddingStart="20sp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/createNewB"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="128dp"
        android:background="@mipmap/rect4"
        android:fontFamily="@font/acme"
        android:text="@string/create_new_accounth"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regB"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/regB"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@mipmap/rect3"
        android:fontFamily="@font/acme"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passConReg" />

    <ProgressBar
        android:id="@+id/progressLogin"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>